--- a/src/js/parks/parks.html
+++ b/src/js/parks/parks.html
@@ -3,17 +3,14 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 </head>
 
-<body>
+<div class="parksBackground">
+
 	<div id = "map">
 	<label><h3>Here are all the dog parks near your current location<h3></label>
-	<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=dog+parks+near+me&zoom=12&key=AIzaSyBWZ2I7MGp5866H_KSp6b_OXqHYGh3ySNE" allowfullscreen></iframe>
+	<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=dog+parks+near+me&zoom=12&key=AIzaSyA_JDS7v_VkPe09bWOnr6jVNe62QOx1EnE" allowfullscreen></iframe>
 	</div>
 
 
-
-	<div>
-		<button ng-click="parks.submit()">CLick Here</button>
-	</div>		
-</body>
+		
 
 
