refactor login, overview, style

--- a/src/js/addPup/addPup.html
+++ b/src/js/addPup/addPup.html
@@ -51,8 +51,12 @@
         </p>
         <p class="control pupUploadbtn">
             <label class="label">Upload a Profile Picture for Your Pup</label>
-            <button class="button is-primary is-medium" ng-click="pup.upload()"><span class="caret">Click Here</span>
+            <button class="button is-primary is-medium" ng-click="pup.upload()"><span class="caret"></span>Click Here!
             </button>
         </p>
+        <div class="column" id="yoda">
+        <h2><strong>"Do or do not, there is no try."<strong> -Yoda</h2>
+        <img src="images/cartoonYoda.png" height="500" width="400">
+    </div>
     </div>
 </div>
