--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
     <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
     <!--endcss-->
-
+    <link href="images/imageedit_24_9569810315.png">
     <!--CustomCSS--> 
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela|Lobster">
@@ -44,7 +44,8 @@
             <a href="#" ng-click="nav.passId()" ui-sref="parks({_id: nav.ownerId})">Parks</a>
             <a href="#" ng-click="nav.passId()" ui-sref="photo({_id: nav.ownerId})">Photos</a>
             <a href="#" ng-click="nav.passId()" ui-sref="extra.links({_id: nav.ownerId})">Extra</a>
-            <a href="#" ng-click="login.logoutUser()">Logout</a>
+            <a href="#" ng-click="login.logoutUser()" onclick="closeNav()">Logout</a>
+            <a style="padding: 0;"><img id="kylo" style="border: none; margin-top: 325px;" src="images/kyloRen.png"></a>
         </div>
     </div>
     <div id="push">
@@ -57,7 +58,11 @@
             <div class="nav-left navBackgrond">
                 <a class="navTitle nav-item is-brand" href="#" ui-sref="overview({_id: nav.ownerId})">chewBarka</a>
             </div>
+            <div class="nav-middle" style="background-color: black;">
+            <img src="images/bobaFett.png" style="border: none;" height="70" width="70">
+            </div>
             <div class="nav-right">
+                 <a class="nav-item" id="rouge" href="#" style="font-size: 25px; margin-right: 480px;">Rouge One <i class="fa fa-rebel"> </i> </a>
                  <a class="click" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</a>
             </div>
 
@@ -74,9 +79,9 @@
         <!--endlazyload-->
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer class="footer" style="background-color: black;">
             <div class="content" align="center">
-                <p>
+                <p style="color: white; display: inline;">
                     <strong>ChewBarka Creators:</strong> Cole Logan and Herberto Basulto
                 </p>
             </div>
@@ -116,13 +121,13 @@
     <script src="js/core/todo.factory.js"></script>
     <script src="js/equipment/equipment.controller.js"></script>
     <script src="js/events/events.controller.js"></script>
+    <script src="js/login/login.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
-    <script src="js/login/login.controller.js"></script>
-    <script src="js/medical/medical.controller.js"></script>
-    <script src="js/overview/overview.controller.js"></script>
     <script src="js/navBar/navbar.controller.js"></script>
+    <script src="js/overview/overview.controller.js"></script>
+    <script src="js/medical/medical.controller.js"></script>
     <script src="js/parks/parks.controller.js"></script>
     <script src="js/photos/photo.controller.js"></script>
     <script src="js/pupInfo/pupInfo.controller.js"></script>
