--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <a href="#" ng-click="nav.passId()" ui-sref="photo({_id: nav.ownerId})">Photos</a>
             <a href="#" ng-click="nav.passId()" ui-sref="extra.links({_id: nav.ownerId})">Extra</a>
             <a href="#" ng-click="login.logoutUser()" onclick="closeNav()">Logout</a>
-            <a style="padding: 0;"><img id="kylo" style="border: none; margin-top: 325px;" src="images/kyloRen.png"></a>
+            <a style="padding: 0;"><img id="kylo" style="border: none; margin-top: 325px;" src="images/kyloRen3.png"></a>
         </div>
     </div>
     <div id="push">
@@ -63,7 +63,7 @@
             <img src="images/bobaFett.png" style="border: none;" height="70" width="70">
             </div>
             <div class="nav-right">
-                 <a class="nav-item" id="rouge" href="#" style="font-size: 25px; margin-right: 480px;">Rouge One <i class="fa fa-rebel"> </i> </a>
+                 <a class="nav-item" id="rouge" style="font-size: 25px; margin-right: 480px;">Rouge One <i class="fa fa-rebel"> </i> </a>
                  <a class="click" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</a>
             </div>
         </nav>
@@ -104,7 +104,6 @@
     <!--endbower-->
     <!--inject:js-->
     <script src="js/app.module.js"></script>
-    <script src="js/addPup/addPup.controller.js"></script>
     <script src="js/core/crud.factory.js"></script>
     <script src="js/core/equipment.factory.js"></script>
     <script src="js/core/event.factory.js"></script>
@@ -119,13 +118,14 @@
     <script src="js/core/pup.factory.js"></script>
     <script src="js/core/register.factory.js"></script>
     <script src="js/core/todo.factory.js"></script>
+    <script src="js/addPup/addPup.controller.js"></script>
     <script src="js/equipment/equipment.controller.js"></script>
     <script src="js/events/events.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
-    <script src="js/login/login.controller.js"></script>
     <script src="js/medical/medical.controller.js"></script>
+    <script src="js/login/login.controller.js"></script>
     <script src="js/navBar/navbar.controller.js"></script>
     <script src="js/overview/overview.controller.js"></script>
     <script src="js/parks/parks.controller.js"></script>
