Parks page done, pupInfo done, add Pup done, I hope.

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="js/pupInfo/pupInfo.css">
     <!--endinject-->
 </head>
-<body>
+<body class="allBackground">
     <!--Right Navigation Bar -->
     <div ng-controller="navController as nav">
         <div id="mySidenav" class="sidenav">
@@ -63,7 +63,7 @@
             <img src="images/bobaFett.png" style="border: none;" height="70" width="70">
             </div>
             <div class="nav-right">
-                 <a class="nav-item" id="rouge" href="#" style="font-size: 25px; margin-right: 480px;">Rouge One <i class="fa fa-rebel"> </i> </a>
+                 <a class="nav-item" id="rouge" >Rouge One <i class="fa fa-rebel"> </i> </a>
                  <a class="click" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</a>
             </div>
         </nav>
