--- a/src/js/pupInfo/pupInfo.html
+++ b/src/js/pupInfo/pupInfo.html
@@ -1,5 +1,5 @@
 <section class="section app pupInfoBackground">
-    <div class="container">
+    <div class="container is-fluid">
         <div class="tile is-ancestor">
             <div class="tile is-vertical is-7">
                 <div class="tile">
@@ -168,7 +168,7 @@
                 </div>
             </div>
         </section>
-        <table class="table table-hover table-condensed">
+        <table class="table table-hover table-condensed bottomTable">
             <thead>
                 <tr>
                     <td>Enter When Fitness Happened
