Cleaned up unused code

--- a/src/js/parks/parks.html
+++ b/src/js/parks/parks.html
@@ -28,9 +28,9 @@
                     <article class="tile is-child box notification is-info">
                         <p class="title articleText">Find The Nearest Overnight Stays</p>
                         <p class="subtitle articleText">Click for Locations</p>
-                        <div class="content">
+                        <div class="content articleText">
                             Click box to Swtich Between Maps
-                            <a class="pawBTN" ng-model="checked"><i class="fa fa-paw large" aria-hidden="true"></i></a>
+                            <!-- <a class="pawBTN" ng-model="checked"><i class="fa fa-paw large" aria-hidden="true"></i></a> -->
                             <input type="checkbox" ng-model="overnightStays" aria-label="Toggle ngShow">
                         </div>
                     </article>
@@ -39,9 +39,9 @@
                     <article class="tile is-child box notification is-primary">
                         <p class="title articleText">Find The Nearest Pet Grooming shop</p>
                         <p class="subtitle articleText">Click for Locations</p>
-                        <div class="content">
+                        <div class="content articleText">
                             Click box to Swtich Between Maps
-                            <a class="pawBTN" ng-model="checked"><i class="fa fa-paw large" aria-hidden="true"></i></a>
+                            <!-- <a class="pawBTN" ng-model="checked"><i class="fa fa-paw large" aria-hidden="true"></i></a> -->
                             <input type="checkbox" ng-model="checked" aria-label="Toggle ngShow">
                         </div>
                     </article>
