--- a/src/js/pupInfo/pupInfo.html
+++ b/src/js/pupInfo/pupInfo.html
@@ -171,10 +171,10 @@
         <table class="table table-hover table-condensed bottomTable">
             <thead>
                 <tr>
-                    <td>Enter When Fitness Happened
+                    <td>When Fitness Happened
                         <input class="input" type="date" ng-model="pupInfo.newFitness.date">
                     </td>
-                    <td>Enter How'd it Go
+                    <td>How'd it Go
                         <input class="input" type="text" ng-model="pupInfo.newFitness.notes">
                     </td>
                     <td>
