--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
     <script src="bower_components/angular-datepicker/dist/angular-datepicker.js"></script>
+    <script src="bower_components/angular-momentjs/angular-momentjs.js"></script>
     <!--endbower-->
     <!--inject:js-->
     <script src="js/app.module.js"></script>
@@ -116,12 +117,12 @@
     <script src="js/equipment/equipment.controller.js"></script>
     <script src="js/events/events.controller.js"></script>
     <script src="js/login/login.controller.js"></script>
-    <script src="js/medical/medical.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
-    <script src="js/overview/overview.controller.js"></script>
+    <script src="js/medical/medical.controller.js"></script>
     <script src="js/navBar/navbar.controller.js"></script>
+    <script src="js/overview/overview.controller.js"></script>
     <script src="js/parks/parks.controller.js"></script>
     <script src="js/photos/photo.controller.js"></script>
     <script src="js/pupInfo/pupInfo.controller.js"></script>
